# server/swagger-output.json
@@ -10,10 +10,6 @@
   "schemes": [
     "http"
   ],
-  "tags": [
-    "User",
-    "Brand"
-  ],
   "paths": {
     "/api/user/registration": {
       "post": {
@@ -276,6 +272,156 @@
           },
           "404": {
             "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/api/role/create": {
+      "post": {
+        "tags": [
+          "Role"
+        ],
+        "description": "Endpoint for role",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Role creation data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "role": {
+                  "type": "string"
+                },
+                "description": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Role has created successfully",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "role": {
+                  "type": "object"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string"
+                },
+                "errors": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/role": {
+      "get": {
+        "tags": [
+          "Role"
+        ],
+        "description": "Get all roles",
+        "responses": {
+          "200": {
+            "description": "ОК",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string"
+                },
+                "errors": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/role/{id}": {
+      "get": {
+        "tags": [
+          "Role"
+        ],
+        "description": "Endpoint to get a single role by ID.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of the role to retrieve",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation.",
+            "schema": {
+              "type": "object"
+            }
+          },
+          "404": {
+            "description": "Role not found."
+          }
+        }
+      }
+    },
+    "/api/role/delete": {
+      "delete": {
+        "tags": [
+          "Role"
+        ],
+        "description": "Endpoint to delete a single role by ID.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "body",
+            "description": "ID of the role to delete",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "number"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Role has deleted",
+            "schema": {
+              "type": "string"
+            }
+          },
+          "404": {
+            "description": "Role not found."
           }
         }
       }
@@ -574,66 +720,12 @@
         }
       }
     },
-    "/api/role/create": {
-      "post": {
-        "tags": [
-          "Role"
-        ],
-        "description": "Endpoint for role",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "description": "Role creation data",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "role": {
-                  "type": "string"
-                },
-                "description": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Role has created successfully",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "role": {
-                  "type": "object"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string"
-                },
-                "errors": {
-                  "type": "object"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/role": {
+    "/api/product": {
       "get": {
         "tags": [
-          "Role"
+          "Category"
         ],
-        "description": "Get all roles",
+        "description": "Get all categories",
         "responses": {
           "200": {
             "description": "ОК",
@@ -661,17 +753,17 @@
         }
       }
     },
-    "/api/role/{id}": {
+    "/api/product/{id}": {
       "get": {
         "tags": [
-          "Role"
+          "Category"
         ],
-        "description": "Endpoint to get a single role by ID.",
+        "description": "Endpoint to get a single category by ID.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
-            "description": "ID of the role to retrieve",
+            "description": "ID of the brand to retrieve",
             "required": true,
             "type": "string"
           }
@@ -684,22 +776,22 @@
             }
           },
           "404": {
-            "description": "Role not found."
+            "description": "Category not found."
           }
         }
       }
     },
-    "/api/role/delete": {
+    "/api/product/delete": {
       "delete": {
         "tags": [
-          "Role"
+          "Category"
         ],
-        "description": "Endpoint to delete a single role by ID.",
+        "description": "Endpoint to delete a single category by ID.",
         "parameters": [
           {
             "name": "id",
             "in": "body",
-            "description": "ID of the role to delete",
+            "description": "ID of the category to delete",
             "required": true,
             "schema": {
               "type": "object",
@@ -713,15 +805,141 @@
         ],
         "responses": {
           "200": {
-            "description": "Role has deleted",
+            "description": "Category has deleted",
             "schema": {
               "type": "string"
             }
           },
           "404": {
-            "description": "Role not found."
+            "description": "Category not found."
           }
         }
+      }
+    },
+    "/api/product/create": {
+      "post": {
+        "tags": [
+          "Product"
+        ],
+        "description": "Create new product",
+        "consumes": [
+          "multipart/form-data"
+        ],
+        "parameters": [
+          {
+            "name": "title",
+            "in": "formData",
+            "description": "Title of the product",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "price",
+            "in": "formData",
+            "description": "Price of the product",
+            "required": true,
+            "type": "number"
+          },
+          {
+            "name": "year",
+            "in": "formData",
+            "description": "Year of the product",
+            "required": true,
+            "type": "number"
+          },
+          {
+            "name": "hours",
+            "in": "formData",
+            "description": "Hours of usage of the product",
+            "required": true,
+            "type": "number"
+          },
+          {
+            "name": "brandId",
+            "in": "formData",
+            "description": "ID of the product's brand",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "categoryId",
+            "in": "formData",
+            "description": "ID of the product's category",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "image",
+            "in": "formData",
+            "description": "Image of the product",
+            "required": true,
+            "type": "file"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "New product created successfully",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "product": {
+                  "$ref": "#/definitions/Product"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string"
+                },
+                "errors": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "definitions": {
+      "Product": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string"
+          },
+          "brandId": {
+            "type": "string"
+          },
+          "categoryId": {
+            "type": "string"
+          },
+          "price": {
+            "type": "number"
+          },
+          "year": {
+            "type": "number"
+          },
+          "hours": {
+            "type": "number"
+          },
+          "image": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "title",
+          "brandId",
+          "categoryId",
+          "price",
+          "year",
+          "hours",
+          "image"
+        ]
       }
     }
   }
